--- a/src/app/components/services/back-end-development/back-end-development.component.html
+++ b/src/app/components/services/back-end-development/back-end-development.component.html
@@ -149,7 +149,7 @@
             <div class="col-md-4">
               <div class="service" routerLink="/services/usability-testing">
                   <div class="service-icon">
-                    <img src="/assets/images/services/five.png" alt="Usablity Testing"/>
+                    <img src="/assets/images/services/five.svg" alt="Usablity Testing"/>
                   </div>
                   <h4>USABILITY TESTING</h4>
                   <p>By means of Usability Testing techniques we valuate the product or website’s user experience even before it is built or it hits the market to assess and iterate the design to reduce cost and enhance end user’s experience</p>
@@ -159,7 +159,7 @@
           <div class="col-md-4">
             <div class="service" routerLink="/services/interface-design">
               <div class="service-icon">
-                <img src="/assets/images/services/two.png" alt="UI Design"/>
+                <img src="/assets/images/services/two.svg" alt="Interface Design"/>
               </div>
               <h4>INTERFACE DESIGN</h4>
               <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI.</p>
@@ -169,7 +169,7 @@
               <div class="col-md-4">
                 <div class="service" routerLink="/services/user-experience">
                   <div class="service-icon">
-                      <img src="/assets/images/services/one.png" alt="UX consulting"/>
+                      <img src="/assets/images/services/one.svg" alt="User Experience"/>
                   </div>
                   <h4>USER EXPERIENCE</h4>
                   <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
