--- a/src/app/components/services/front-end-development/development.component.html
+++ b/src/app/components/services/front-end-development/development.component.html
@@ -185,7 +185,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/user-experience">
                       <div class="service-icon">
-                          <img src="/assets/images/services/one.png" alt="UX consulting"/>
+                          <img src="/assets/images/services/one.svg" alt="User Experience"/>
                       </div>
                       <h4>USER EXPERIENCE</h4>
                       <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
@@ -195,7 +195,7 @@
                   <div class="col-md-4">
                     <div class="service" routerLink="/services/interface-design">
                       <div class="service-icon">
-                        <img src="/assets/images/services/two.png" alt="Interface Design"/>
+                        <img src="/assets/images/services/two.svg" alt="Interface Design"/>
                       </div>
                       <h4>INTERFACE DESIGN</h4>
                       <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
@@ -205,7 +205,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/end-to-end">
                         <div class="service-icon">
-                          <img src="/assets/images/services/four.png" alt="End-to-End Development"/>
+                          <img src="/assets/images/services/four.svg" alt="End-to-End Development"/>
                         </div>
                         <h4>END TO END DEVELOPMENT</h4>
                         <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
