--- a/src/app/components/services/usability-testing/usability-testing.component.html
+++ b/src/app/components/services/usability-testing/usability-testing.component.html
@@ -108,7 +108,7 @@
       <div class="row">
           <div class="col-md-6">
               <div class="step-image image">
-                  <img src="/assets/images/projects/project10.png" alt="Interface" />
+                  <img src="/assets/images/projects/project10.png" alt="" />
               </div>
           </div>
           <div class="col-md-6">
@@ -139,7 +139,7 @@
               <div class="col-md-4">
                 <div class="service" routerLink="/services/user-experience">
                   <div class="service-icon">
-                      <img src="/assets/images/services/one.png" alt="UX consulting"/>
+                      <img src="/assets/images/services/one.svg" alt="User Experience"/>
                   </div>
                   <h4>USER EXPERIENCE</h4>
                   <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
@@ -149,7 +149,7 @@
               <div class="col-md-4">
                 <div class="service" routerLink="/services/interface-design">
                   <div class="service-icon">
-                    <img src="/assets/images/services/two.png" alt="Interface Design"/>
+                    <img src="/assets/images/services/two.svg" alt="Interface Design"/>
                   </div>
                   <h4>INTERFACE DESIGN</h4>
                   <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
@@ -159,7 +159,7 @@
             <div class="col-md-4">
               <div class="service" routerLink="/services/ui-dev">
                   <div class="service-icon">
-                    <img src="/assets/images/services/three.png" alt="Front End Dev" />
+                    <img src="/assets/images/services/three.svg" alt="UI Development" />
                   </div>
                   <h4>UI DEVELOPMENT</h4>
                   <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
