--- a/src/app/components/services/ux-consulting/ux-consulting.component.html
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.html
@@ -203,7 +203,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="step-image image">
-                    <img src="/assets/images/projects/project1.png" alt="Interface" />
+                    <img src="/assets/images/projects/project1.png" alt="" />
                 </div>
             </div>
             <div class="col-md-6">
@@ -234,7 +234,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/ui-dev">
                         <div class="service-icon">
-                          <img src="/assets/images/services/one.png" alt="UI Development" /> 
+                          <img src="/assets/images/services/three.svg" alt="UI Development" /> 
                         </div>
                         <h4>UI DEVELOPMENT</h4>
                         <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
@@ -245,7 +245,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/end-to-end">
                         <div class="service-icon">
-                          <img src="/assets/images/services/four.png" alt="End-to-End Development"/>
+                          <img src="/assets/images/services/four.svg" alt="End-to-End Development"/>
                         </div>
                         <h4>END TO END DEVELOPMENT</h4>
                         <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
@@ -255,7 +255,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/interface-design">
                       <div class="service-icon">
-                        <img src="/assets/images/services/two.png" alt="Interface Design"/>
+                        <img src="/assets/images/services/two.svg" alt="Interface Design"/>
                       </div>
                       <h4>INTERFACE DESIGN</h4>
                       <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
