--- a/src/app/components/services/visual-design/visual-design.component.html
+++ b/src/app/components/services/visual-design/visual-design.component.html
@@ -84,7 +84,7 @@
             <div class="col-md-1"></div>
             <div class="col-md-5 m-first">
                 <div class="step-image">
-                    <img src="/assets/images/services/vd2.png" alt="Color Variation" />
+                    <img src="/assets/images/services/vd2.png" alt="" />
                 </div>
             </div>
         </div>
@@ -107,8 +107,8 @@
     <div class="row space">
         <div class="col-md-12">
         <div class="step-image step-image-res">
-            <img src="/assets/images/services/vd4.png" class="img" alt="Color Variation" />
-            <img src="/assets/images/services/vd9.png" class="over-img" alt="Color Variation" />
+            <img src="/assets/images/services/vd4.png" class="img" alt="" />
+            <img src="/assets/images/services/vd9.png" class="over-img" alt="" />
         </div>
         </div>
     </div>
@@ -128,7 +128,7 @@
             </div>
             <div class="col-md-6">
                 <div class="step-image">
-                    <img src="/assets/images/services/vd5.png" alt="Iconography" />
+                    <img src="/assets/images/services/vd5.png" alt="" />
                 </div>
             </div>
         </div>
@@ -252,13 +252,13 @@
             </div>
             <div class="col-md-6">
                 <div class="step-image">
-                    <img src="/assets/images/services/vd7.png" alt="Layout" />
+                    <img src="/assets/images/services/vd7.png" alt="" />
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="step-image image-align">
-                <img src="/assets/images/services/vd8.png" alt="Layout" />
+                <img src="/assets/images/services/vd8.png" alt="" />
             </div>
         </div>
     </div>
@@ -278,14 +278,14 @@
             </div>
             <div class="col-md-6 m-last">
                 <div class="step-image">
-                    <img src="/assets/images/services/vd10.png" alt="Style Guide" />
+                    <img src="/assets/images/services/vd10.png" alt="" />
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6 m-last">
                 <div class="step-image">
-                    <img src="/assets/images/services/vd11.png" alt="Style Guide" />
+                    <img src="/assets/images/services/vd11.png" alt="" />
                 </div>
             </div>
             <div class="col-md-6 m-first">
@@ -310,13 +310,13 @@
             </div>
             <div class="col-md-6">
                 <div class="step-image">
-                    <img src="/assets/images/services/vd12.png" alt="Illustrations" />
+                    <img src="/assets/images/services/vd12.png" alt="" />
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="step-image image-align">
-                <img src="/assets/images/services/vd13.png" alt="Layout" />
+                <img src="/assets/images/services/vd13.png" alt="" />
             </div>
         </div>
     </div>
@@ -336,19 +336,19 @@
             </div>
             <div class="col-md-6">
                 <div class="step-image">
-                    <img src="/assets/images/services/vd14.png" alt="Logo" />
+                    <img src="/assets/images/services/vd14.png" alt="" />
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6 image">
                 <div class="step-image">
-                    <img src="/assets/images/services/vd15.png" alt="Logo" />
+                    <img src="/assets/images/services/vd15.png" alt="" />
                 </div>
             </div>
             <div class="col-md-6 image">
                 <div class="step-image">
-                    <img src="/assets/images/services/vd16.png" alt="Logo" />
+                    <img src="/assets/images/services/vd16.png" alt="" />
                 </div>
             </div>
         </div>
@@ -370,31 +370,31 @@
         </div>
         <div class="row">
             <div class="step-image image-align">
-                <img src="/assets/images/services/interface-design/vd17.png" alt="Interface" />
+                <img src="/assets/images/services/interface-design/vd17.png" alt="" />
             </div>
             <div class="step-image image-align">
-                <img src="/assets/images/services/vd18.png" alt="Interface" />
+                <img src="/assets/images/services/vd18.png" alt="" />
             </div>
         </div>
         <div class="row">
             <div class="col-md-3">
                 <div class="step-image5 image-align5">
-                    <img src="/assets/images/services/vd19.png" alt="Interface" />
+                    <img src="/assets/images/services/vd19.png" alt="" />
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="step-image5 image-align5">
-                    <img src="/assets/images/services/vd20.png" alt="Interface" />
+                    <img src="/assets/images/services/vd20.png" alt="" />
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="step-image5 image-align5">
-                    <img src="/assets/images/services/vd21.png" alt="Interface" />
+                    <img src="/assets/images/services/vd21.png" alt="" />
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="step-image5 image-align5">
-                    <img src="/assets/images/services/vd22.png" alt="Interface" />
+                    <img src="/assets/images/services/vd22.png" alt="" />
                 </div>
             </div>
         </div>
@@ -407,7 +407,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="step-image image">
-                    <img src="/assets/images/projects/project7.png" alt="Interface" />
+                    <img src="/assets/images/projects/project7.png" alt="" />
                 </div>
             </div>
             <div class="col-md-6">
@@ -438,7 +438,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/user-experience">
                       <div class="service-icon">
-                          <img src="/assets/images/services/one.png" alt="UX consulting"/>
+                          <img src="/assets/images/services/one.svg" alt="User Experience"/>
                       </div>
                       <h4>USER EXPERIENCE</h4>
                       <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
@@ -449,7 +449,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/ui-dev">
                         <div class="service-icon">
-                          <img src="/assets/images/services/three.png" alt="Front End Dev" /> 
+                          <img src="/assets/images/services/three.svg" alt="UI Development" /> 
                         </div>
                         <h4>UI DEVELOPMENT</h4>
                         <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
@@ -461,7 +461,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/end-to-end">
                         <div class="service-icon">
-                          <img src="/assets/images/services/four.png" alt="End-to-End Development"/>
+                          <img src="/assets/images/services/four.svg" alt="End-to-End Development"/>
                         </div>
                         <h4>END TO END DEVELOPMENT</h4>
                         <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
