about-us page changes

--- a/src/app/components/about-us/about-us.component.scss
+++ b/src/app/components/about-us/about-us.component.scss
@@ -9,7 +9,7 @@
     display: none;  
 }
 .love-working{
-    margin-bottom: 72px;
+    //margin-bottom: 72px;
     background-color: #E8FBF5;
     .about{
         padding: 56px 20px;
