--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -29,7 +29,7 @@
 </div>
 
 
-<div class="our-mission">
+<!-- <div class="our-mission">
 <div class="container">
   <div class="heading">
   <h3>OUR MISSION AND GOAL</h3>
@@ -50,4 +50,4 @@
     </div>
   </div>
 </div>
-</div>
+</div> -->
