--- a/src/styles.scss
+++ b/src/styles.scss
@@ -89,7 +89,7 @@ label{
 
 /* Services */
 .services-offer{
-    margin-bottom: 200px;
+    margin-bottom: 130px;
     padding-top: 150px;
     .row{
         border-bottom: 1px solid #F3F3F3;
@@ -201,7 +201,7 @@ label{
 //.solution-body{
     //background-color: #313030;
 //}
-.solution-heading{
+.solutions-heading{
     margin-bottom: 102px;
     h4{
         text-align: center;
@@ -226,7 +226,7 @@ label{
         div.tile{
             box-shadow: none;
             //display: flex;
-            .solution{
+            .solutions-step{
                 background-color: #313030;
                 display: flex;
                 align-items: center;
