--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -186,17 +186,17 @@
 <!-- /Services -->
 
 <!-- Solutions -->
-<div class="solutions">
-  <div class="solution-heading">
+<!-- <div class="solutions">
+  <div class="solutions-heading">
     <h4>OUR  SOLUTIONS  ARE  HELPING  AUDIENCE</h4>
     <div class="step-image">
       <img src="/assets/images/sample/line.svg" />
     </div>
   </div>
-  <div class="solution-body">
+  <div class="solutions-body">
     <ngu-carousel class="solutions-carousel" #solutionCarousel [inputs]="solutionsCarouselConfig" [dataSource]="solutions">
       <ngu-tile *nguCarouselDef="let item; let i = index">
-          <div class="solution">
+          <div class="solutions-step">
             <div class="row">
               <div class="col-md-6">
                 <div class="cover">
@@ -219,6 +219,53 @@
             </div>
             </div>
           </div>
+          
+        </div>
+      </ngu-tile>
+      <ul class="ngucarousel-indicator-two" NguCarouselPoint>
+        <li *ngFor="let pointer of solutionCarousel.pointNumbers; let i = index">
+          <a (click)="solutionCarousel.moveTo(i)" [class.active]="solutionCarousel.activePoint == i">&nbsp;</a>
+        </li>
+      </ul>
+    </ngu-carousel>
+  </div>
+</div> -->
+
+<div class="solution">
+  <div class="solution-heading">
+    <h4>OUR  SOLUTIONS  ARE  HELPING  AUDIENCE</h4>
+    <div class="step-image">
+      <img src="/assets/images/sample/line.svg" />
+    </div>
+  </div>
+  <div class="solution-body">
+    <ngu-carousel class="solution-carousel" #solutionCarousel [inputs]="solutionsCarouselConfig" [dataSource]="solutions">
+      <ngu-tile *nguCarouselDef="let item; let i = index">
+          <div class="solution-step">
+            <div class="shadow p-3 mb-5 bg-white rounded">
+            <div class="row">
+              <div class="col-md-5">
+                <div class="cover">
+              <div class="image">
+                  <img [src]="item.imageSrc" [alt]="item.title" />
+              </div>
+            </div>
+            </div>
+            <div class="col-md-7">
+              <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col-md-10">
+              <div class="description">
+                  <h1>{{ item.title }}</h1>
+                  <p>{{ item.description }}</p>
+                  <a [routerLink]="item.link.route">{{ item.link.text }} <fa-icon [icon]="['fas','chevron-right']"></fa-icon></a>
+              </div>
+            </div>
+            <div class="col-md-1"></div>
+            </div>
+            </div>
+          </div>
+        </div>
           <!-- <div class="row">
             <ul class="ngucarousel-indicator-one" NguCarouselPoint>
               <li *ngFor="let pointer of solutionCarousel.pointNumbers; let i = index">
