service page changes

--- a/src/app/components/services/visual-design/visual-design.component.html
+++ b/src/app/components/services/visual-design/visual-design.component.html
@@ -233,6 +233,9 @@
                     <li>
                         <fa-icon [icon]="['fas','desktop']"></fa-icon>
                     </li>
+                    <li>
+                        <fa-icon [icon]="['','']"></fa-icon>
+                    </li>
                 </ul>
         </div>
     </div>
