case study changes

--- a/src/app/components/services/front-end-development/development.component.html
+++ b/src/app/components/services/front-end-development/development.component.html
@@ -149,28 +149,31 @@
 </div>
 
 <div class="service-step4">
+    <div class="step-heading">
+        <h4>OUR  SOLUTIONS  ARE  HELPING  AUDIENCE</h4>
+        <div class="step-image">
+            <img src="/assets/images/sample/line.svg" />
+          </div>
+    </div>
         <div class="case-study">
+        <div class="body">
+        <div class="shadow p-3 mb-5 bg-white rounded">
         <div class="row">
-           <div class="col-md-6">
+           <div class="col-md-4">
             <div class="step-image">
                 <img src="/assets/images/services/ui-dev/fd3.png" alt="" />
             </div>
            </div>
-           <div class="col-md-6">
-            <div class="row">
-                <div class="col-md-1"></div>
-                <div class="col-md-10">
+           <div class="col-md-8">
                <div class="text">
                <h5>APP DEVELOPMENT</h5>
                <p>A community portal for Skill Development providing end-to-end solution 
                    for continious learning and collaboration. </p>
                <a routerLink="/projects/app-development"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
               </div>
-            </div>
-            <div class="col-md-1"></div>
-            </div>
            </div>
         </div>
+    </div>
     </div>
 </div>
 
@@ -185,7 +188,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/user-experience">
                       <div class="service-icon">
-                          <img src="/assets/images/services/icons/one.svg" alt="User Experience"/>
+                          <img src="/assets/images/home/user-experience.svg" alt="User Experience"/>
                       </div>
                       <h4>USER EXPERIENCE</h4>
                       <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
@@ -195,7 +198,7 @@
                   <div class="col-md-4">
                     <div class="service" routerLink="/services/interface-design">
                       <div class="service-icon">
-                        <img src="/assets/images/services/icons/two.svg" alt="Interface Design"/>
+                        <img src="/assets/images/home/interface-design.svg" alt="Interface Design"/>
                       </div>
                       <h4>INTERFACE DESIGN</h4>
                       <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
@@ -205,7 +208,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/end-to-end">
                         <div class="service-icon">
-                          <img src="/assets/images/services/icons/four.svg" alt="End-to-End Development"/>
+                          <img src="/assets/images/home/end-to-end.svg" alt="End-to-End Development"/>
                         </div>
                         <h4>END TO END DEVELOPMENT</h4>
                         <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
