--- a/src/app/components/services/ux-consulting/ux-consulting.component.html
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.html
@@ -199,28 +199,32 @@
 </div>
 
 <div class="service-step9">
+    <div class="step-heading">
+        <h4>OUR  SOLUTIONS  ARE  HELPING  AUDIENCE</h4>
+        <div class="step-image">
+            <img src="/assets/images/sample/line.svg" />
+          </div>
+    </div>
         <div class="case-study">
+        <div class="body">
+        <div class="shadow p-3 mb-5 bg-white rounded">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="step-image image">
                     <img src="/assets/images/projects/project1.jpg" alt="" />
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="row">
-                    <div class="col-md-1"></div>
-                    <div class="col-md-10">
+            <div class="col-md-8">
                 <div class="text">
                 <h5>EVENT MANAGEMENT</h5>
                 <p>The event management portal builds a network of people from the comfort of their home and enables to find venues and services for their Big Day! </p>
                 <a routerLink="/projects/event-management"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
                 </div>
             </div>
-            <div class="col-md-1"></div>
-            </div>
-            </div>
         </div>
+    </div>
         </div>
+    </div>
 </div>
 
 <!-- Services -->
@@ -234,7 +238,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/ui-dev">
                         <div class="service-icon">
-                          <img src="/assets/images/services/icons/three.svg" alt="UI Development" /> 
+                          <img src="/assets/images/home/ui-dev.svg" alt="UI Development" /> 
                         </div>
                         <h4>UI DEVELOPMENT</h4>
                         <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
@@ -245,7 +249,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/end-to-end">
                         <div class="service-icon">
-                          <img src="/assets/images/services/icons/four.svg" alt="End-to-End Development"/>
+                          <img src="/assets/images/home/end-to-end.svg" alt="End-to-End Development"/>
                         </div>
                         <h4>END TO END DEVELOPMENT</h4>
                         <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
@@ -255,7 +259,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/interface-design">
                       <div class="service-icon">
-                        <img src="/assets/images/services/icons/two.svg" alt="Interface Design"/>
+                        <img src="/assets/images/home/interface-design.svg" alt="Interface Design"/>
                       </div>
                       <h4>INTERFACE DESIGN</h4>
                       <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
