--- a/src/app/components/services/back-end-development/back-end-development.component.html
+++ b/src/app/components/services/back-end-development/back-end-development.component.html
@@ -113,17 +113,22 @@
 </div>
 
 <div class="service-step4">
+  <div class="step-heading">
+    <h4>OUR  SOLUTIONS  ARE  HELPING  AUDIENCE</h4>
+    <div class="step-image">
+      <img src="/assets/images/sample/line.svg" />
+    </div>
+</div>
     <div class="case-study">
+    <div class="body">
+    <div class="shadow p-3 mb-5 bg-white rounded">
       <div class="row">
-         <div class="col-md-6">
+         <div class="col-md-4">
           <div class="step-image">
               <img src="/assets/images/services/end-to-end/bd5.png" alt="" />
           </div>
          </div>
-         <div class="col-md-6">
-          <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
+         <div class="col-md-8">
            <div class="text">
              <h5>WEB DEVELOPMENT</h5>
             <p>The portal was designed for a conglomerate with Global Operations to showcase their portfolio of works; the portal with rich UI for statistical and graphical representation used predominantly by Sales Team for proposal initiative.
@@ -131,11 +136,9 @@
           <a routerLink="/projects/web-development"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
          </div>
         </div>
-        <div class="col-md-1"></div>
-        </div>
-        </div>
         </div>
       </div>
+    </div>
 </div>
 
 <!-- Services -->
@@ -149,7 +152,7 @@
             <div class="col-md-4">
               <div class="service" routerLink="/services/usability-testing">
                   <div class="service-icon">
-                    <img src="/assets/images/services/icons/five.svg" alt="Usablity Testing"/>
+                    <img src="/assets/images/home/usability-testing.svg" alt="Usablity Testing"/>
                   </div>
                   <h4>USABILITY TESTING</h4>
                   <p>By means of Usability Testing techniques we valuate the product or website’s user experience even before it is built or it hits the market to assess and iterate the design to reduce cost and enhance end user’s experience</p>
@@ -159,7 +162,7 @@
           <div class="col-md-4">
             <div class="service" routerLink="/services/interface-design">
               <div class="service-icon">
-                <img src="/assets/images/services/icons/two.svg" alt="Interface Design"/>
+                <img src="/assets/images/home/interface-design.svg" alt="Interface Design"/>
               </div>
               <h4>INTERFACE DESIGN</h4>
               <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI.</p>
@@ -169,7 +172,7 @@
               <div class="col-md-4">
                 <div class="service" routerLink="/services/user-experience">
                   <div class="service-icon">
-                      <img src="/assets/images/services/icons/one.svg" alt="User Experience"/>
+                      <img src="/assets/images/home/user-experience.svg" alt="User Experience"/>
                   </div>
                   <h4>USER EXPERIENCE</h4>
                   <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
