--- a/src/app/components/services/back-end-development/back-end-development.component.scss
+++ b/src/app/components/services/back-end-development/back-end-development.component.scss
@@ -35,6 +35,7 @@ p{
     padding: 0;
     font-size: 12px;
     font-weight: 300;
+    cursor: pointer;
 }
 .searvice-jumbotron{
     background-color: rgb(255, 255, 255); 
@@ -48,7 +49,7 @@ p{
         margin-top: 30px;
     }
     .step-image2 img{
-        width: 100%;
+        width: 80%;
         height: auto;
     }
     img{
@@ -148,11 +149,10 @@ p{
 }
 .service-step3{
     h5{
-        margin-top: 20px;
         font-size: 40px;
     }
     .step-image img{
-        width: 100%;
+        width: 80%;
         height: auto;
     }
     .row{
@@ -216,7 +216,7 @@ p{
         order: 2;
     }
     h5{
-        margin-top: 20px;
+        margin-top: 10px;
         font-size: 24px;
     }
     .step-image{
