--- a/src/app/components/services/usability-testing/usability-testing.component.html
+++ b/src/app/components/services/usability-testing/usability-testing.component.html
@@ -104,28 +104,32 @@
 </div>
 
 <div class="service-step9">
+  <div class="step-heading">
+    <h4>OUR  SOLUTIONS  ARE  HELPING  AUDIENCE</h4>
+    <div class="step-image">
+      <img src="/assets/images/sample/line.svg" />
+    </div>
+</div>
     <div class="case-study">
+    <div class="body">
+    <div class="shadow p-3 mb-5 bg-white rounded">
       <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-4">
               <div class="step-image image">
                   <img src="/assets/images/projects/project10.png" alt="" />
               </div>
           </div>
-          <div class="col-md-6">
-            <div class="row">
-              <div class="col-md-1"></div>
-              <div class="col-md-10">
+          <div class="col-md-8">
             <div class="text"> 
               <h5>USABILITY TESTING FOR VEHICLE</h5>
                 <p>Portal for business (commercial network services for companies) with high level of scalability to have the services currently done manually.Portal for business (commercial network services for companies) with high level of scalability to have the services currently done manually. </p>
                 <a routerLink="/projects/automobile-usability"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
               </div>
-            </div>
-            <div class="col-md-1"></div>
-            </div>
-              </div>
+          </div>
       </div>
     </div>
+  </div>
+</div>
 </div>
 
 <!-- Services -->
@@ -139,7 +143,7 @@
               <div class="col-md-4">
                 <div class="service" routerLink="/services/user-experience">
                   <div class="service-icon">
-                      <img src="/assets/images/services/icons/one.svg" alt="User Experience"/>
+                      <img src="/assets/images/home/user-experience.svg" alt="User Experience"/>
                   </div>
                   <h4>USER EXPERIENCE</h4>
                   <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
@@ -149,7 +153,7 @@
               <div class="col-md-4">
                 <div class="service" routerLink="/services/interface-design">
                   <div class="service-icon">
-                    <img src="/assets/images/services/icons/two.svg" alt="Interface Design"/>
+                    <img src="/assets/images/home/interface-design.svg" alt="Interface Design"/>
                   </div>
                   <h4>INTERFACE DESIGN</h4>
                   <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
@@ -159,7 +163,7 @@
             <div class="col-md-4">
               <div class="service" routerLink="/services/ui-dev">
                   <div class="service-icon">
-                    <img src="/assets/images/services/icons/three.svg" alt="UI Development" />
+                    <img src="/assets/images/home/ui-dev.svg" alt="UI Development" />
                   </div>
                   <h4>UI DEVELOPMENT</h4>
                   <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
