--- a/src/app/components/services/ux-consulting/ux-consulting.component.scss
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.scss
@@ -34,6 +34,7 @@ p{
     padding: 0;
     font-size: 12px;
     font-weight: 300;
+    cursor: pointer;
 }
 .searvice-jumbotron{
     h1{
@@ -76,6 +77,10 @@ h3{
         font-weight: 300;
         margin-bottom: 30px; 
      }
+     .step-image img{
+        width: 70%;
+        height: auto;
+    }
 }
 .service-step1{
     //background-color: #fff;
@@ -86,6 +91,10 @@ h3{
         font-size: 14px;
         font-weight: 300;
         margin-bottom: 30px;
+    }
+    .step-image img{
+        width: 70%;
+        height: auto;
     }
 }
    
@@ -98,6 +107,10 @@ h3{
         font-size: 14px;
         font-weight: 300;
         margin-bottom: 30px;
+    }
+    .step-image img{
+        width: 70%;
+        height: auto;
     }
 }
 
@@ -123,10 +136,6 @@ h3{
         text-align: justify;
         margin-bottom: 20px;
         line-height: 20px;
-    }
-    .step-image{
-        margin-top: 20px;
-        margin-bottom: 30px;
     }
     .col-sm-1{
         width: 10%;
@@ -188,6 +197,10 @@ h3{
             font-size: 13px;
             margin-bottom: 31px;
          }
+         .step-image{
+            margin-top: 20px;
+            margin-bottom: 30px;
+        }
     }
     .service-step1{
         padding-top: 10px;
@@ -202,6 +215,10 @@ h3{
         }
         .m-last{
             order: 1;
+        }
+        .step-image{
+            margin-top: 20px;
+            margin-bottom: 30px;
         }
         }
        
@@ -222,6 +239,10 @@ h3{
                     color: #6C6C6C;
                     font-size: 13px;
                 }
+            }
+            .step-image{
+                margin-top: 20px;
+                margin-bottom: 30px;
             }
         }
     }
