--- a/src/app/components/services/visual-design/visual-design.component.html
+++ b/src/app/components/services/visual-design/visual-design.component.html
@@ -406,28 +406,32 @@
 
 
 <div class="service-step9">
+    <div class="step-heading">
+        <h4>OUR  SOLUTIONS  ARE  HELPING  AUDIENCE</h4>
+        <div class="step-image">
+            <img src="/assets/images/sample/line.svg" />
+          </div>
+    </div>
         <div class="case-study">
+        <div class="body">
+        <div class="shadow p-3 mb-5 bg-white rounded">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="step-image image">
                     <img src="/assets/images/projects/project7.png" alt="" />
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="row">
-                    <div class="col-md-1"></div>
-                    <div class="col-md-10">
+            <div class="col-md-8">
                 <div class="text">
                 <h5>UX AHEAD STARTUP WEBSITE</h5>
                 <p>Portal for business to for Recruitment and Consulting - showcasing their services and portfolio of works.</p>
                 <a routerLink="/projects/marketing"><h3>VIEW CASE STUDY  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h3></a>
                 </div>
             </div>
-            <div class="col-md-1"></div>
-            </div>
-            </div>
         </div>
     </div>
+</div>
+</div>
 </div>
 
 <!-- Services -->
@@ -441,7 +445,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/user-experience">
                       <div class="service-icon">
-                          <img src="/assets/images/services/icons/one.svg" alt="User Experience"/>
+                          <img src="/assets/images/home/user-experience.svg" alt="User Experience"/>
                       </div>
                       <h4>USER EXPERIENCE</h4>
                       <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
@@ -452,7 +456,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/ui-dev">
                         <div class="service-icon">
-                          <img src="/assets/images/services/icons/three.svg" alt="UI Development" /> 
+                          <img src="/assets/images/home/ui-dev.svg" alt="UI Development" /> 
                         </div>
                         <h4>UI DEVELOPMENT</h4>
                         <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
@@ -464,7 +468,7 @@
                 <div class="col-md-4">
                     <div class="service" routerLink="/services/end-to-end">
                         <div class="service-icon">
-                          <img src="/assets/images/services/icons/four.svg" alt="End-to-End Development"/>
+                          <img src="/assets/images/home/end-to-end.svg" alt="End-to-End Development"/>
                         </div>
                         <h4>END TO END DEVELOPMENT</h4>
                         <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
