--- a/src/styles.scss
+++ b/src/styles.scss
@@ -90,7 +90,7 @@ label{
 /* Services */
 .services-offer{
     margin-bottom: 130px;
-    padding-top: 150px;
+    padding-top: 120px;
     .row{
         border-bottom: 1px solid #F3F3F3;
         &:last-child{
@@ -107,7 +107,7 @@ label{
     }
 }
 .services-heading{
-    margin-bottom: 100px;
+    margin-bottom: 60px;
     h4{
         text-align: center;
         font-size: 34px;
@@ -773,24 +773,48 @@ img{
 
 /* services case study*/
 .service-step9{
-    padding-bottom: 50px;
-    display: block;
+    .step-heading{
+            background-color: #F5F5F5;
+            padding-top: 80px;
+            padding-bottom: 250px;
+    h4{
+        text-align: center;
+        font-size: 34px;
+        line-height: 32px;
+        font-weight: 300;
+    }
+    .step-image{
+        text-align: center;
+        img{
+            width: auto;
+            height: 8px;
+        }
+    }
+    }
     .case-study{
-        background-color: #313030;
-        .row{
-            margin-right: 20px;
+        margin-top: -220px;
+        padding-top: 40px;
+        padding-bottom: 20px;
+        padding-left: 80px;
+        padding-right: 80px;
+        .body{
+            background-color: #FFFFFF;
+        .p-3{
+            padding: 0rem !important;
         }
         .text{
+            padding-top: 70px;
+            margin-left: 30px;
+            margin-right: 150px;
     h5{
         font-size: 40px;
         font-weight: 300;
         text-align: left;
         margin-bottom: 30px;
-        color: #FFFFFF;
-        margin-top: 140px;
+        //color: #FFFFFF;
     }
     p{
-        color: #FFFFFF;
+        //color: #FFFFFF;
         font-size: 14px;
         font-weight: 300;
         text-align: justify;
@@ -799,18 +823,18 @@ img{
     h3{
         font-size: 12px;
         font-weight: 300;
-        color: #60D6C9;
+        //color: #60D6C9;
     }
     a{
         cursor: pointer;
         font-size: 20px;
-        color: #60D6C9;
+        //color: #60D6C9;
         text-decoration: none;
     }
 }
 .step-image img{
             width: 100%;
-            height: 550px;
+            height: 360px;
             transition-property: width, height;
             transition-duration: 1s;
             filter: #606A74; 
@@ -822,27 +846,51 @@ img{
     }
 }
 }
+}
 
 .service-step4{
-    padding-top: 10px;
-    padding-bottom: 50px;
-    display: block;
+    .step-heading{
+        background-color: #F5F5F5;
+        padding-top: 80px;
+        padding-bottom: 250px;
+h4{
+    text-align: center;
+    font-size: 34px;
+    line-height: 32px;
+    font-weight: 300;
+}
+.step-image{
+    text-align: center;
+    img{
+        width: auto;
+        height: 8px;
+    }
+}
+}
     .case-study{
-        background-color: #313030;
-        .row{
-            margin-right: 20px;
+        margin-top: -220px;
+        padding-top: 40px;
+        padding-bottom: 20px;
+        padding-left: 80px;
+        padding-right: 80px;
+        .body{
+            background-color: #FFFFFF;
+        .p-3{
+            padding: 0rem !important;
         }
         .text{
+            padding-top: 70px;
+            margin-left: 30px;
+            margin-right: 150px;
             h5{
                 font-size: 40px;
                 font-weight: 300;
                 text-align: left;
                 margin-bottom: 30px;
-                color: #FFFFFF;
-                margin-top: 150px;
+                //color: #FFFFFF;
             }
             p{
-                color: #FFFFFF;
+                //color: #FFFFFF;
                 font-size: 14px;
                 font-weight: 300;
                 text-align: justify;
@@ -851,20 +899,21 @@ img{
             h3{
                 font-size: 12px;
                 font-weight: 300;
-                color: #60D6C9;
+                //color: #60D6C9;
             }
             a{
                 font-weight: 700;
                 cursor: pointer;
                 font-size: 20px;
-                color: #60D6C9;
+                //color: #60D6C9;
                 text-decoration: none;
             }
         }
     .step-image img{
         width: 100%;
-        height: 550px;
+        height: 360px;
     }
+}
 }
 }
 
@@ -1190,28 +1239,35 @@ img{
     }
     /* services case study */
     .service-step9{
-        padding-bottom: 20px;
-        display: block;
+        .step-heading{
+            padding-top: 50px;
+            padding-bottom: 300px;
+            h4{
+               font-size: 20px;
+               line-height: 24px;
+              }
+            }
         .case-study{
-            background-color: #313030;
-            .row{
-                margin-right: 0;
-                margin-left: 0;
-            }
-            .col-md-10{
-                padding-right: 0;
-                padding-left: 0;
-            }
+            padding-top: 0px;
+            padding-bottom: 0px;
+            padding-left: 20px;
+            padding-right: 20px;
+            .body{
+                margin-top: -250px;
+                .p-3{
+                    padding: 0rem !important;
+                }
             .text{
-                padding: 0;
+                padding-top: 20px;
+                padding-bottom: 10px;
+                margin-left: 15px;
+                margin-right: 15px;
         h5{
-            color: #FFFFFF;
             margin-top: 10px;
             margin-bottom: 10px;
             font-size: 24px;
         }
         p{
-            color: #FFFFFF;
             font-size: 13px;
             text-align: justify;
             margin-bottom: 25px;
@@ -1220,21 +1276,19 @@ img{
         }
         h3{
             font-size: 13px;
-            color: #60D6C9;
+            //color: #60D6C9;
             margin-bottom: 20px;
         }
         a{
             font-weight: 700;
             cursor: pointer;
             font-size: 13px;
-            color: #60D6C9;
+            //color: #60D6C9;
             text-decoration: none;
         }
     }
     
         .step-image img{
-                padding-top: 20px;
-                padding-bottom: 20px;
                 width: 100%;
                 height: auto;
                 transition-property: width, height;
@@ -1246,35 +1300,42 @@ img{
                 filter: none; 
                 -webkit-filter: grayscale(0);
         }
-    
+    }
     }
     }
 
     .service-step4{
-        padding-top: 10px;
-        padding-bottom: 20px;
-        display: block;
+        .step-heading{
+            padding-top: 50px;
+            padding-bottom: 300px;
+            h4{
+               font-size: 20px;
+               line-height: 24px;
+              }
+            }
         .case-study{
-            background-color: #313030;
-            .row{
-                padding-top: 20px;
-                margin-right: 0;
-                margin-left: 0;
-            }
-            .col-md-10{
-                padding-right: 0;
-                padding-left: 0;
-            }
+            padding-top: 0px;
+            padding-bottom: 0px;
+            padding-left: 20px;
+            padding-right: 20px;
+            .body{
+                margin-top: -250px;
+                .p-3{
+                    padding: 0rem !important;
+                }
             .text{
-                padding: 0;
+                padding-top: 20px;
+                padding-bottom: 10px;
+                margin-left: 15px;
+                margin-right: 15px;
         h5{
-            color: #FFFFFF;
+            //color: #FFFFFF;
             margin-top: 10px;
             margin-bottom: 10px;
             font-size: 24px;
         }
         p{
-            color: #FFFFFF;
+            //color: #FFFFFF;
             font-size: 13px;
             text-align: justify;
             margin-bottom: 30px;
@@ -1283,23 +1344,24 @@ img{
         }
         h3{
             font-size: 13px;
-            color: #60D6C9;
+            //color: #60D6C9;
             margin-bottom: 20px;
         }
         a{
             cursor: pointer;
             font-size: 13px;
-            color: #60D6C9;
+            //color: #60D6C9;
             text-decoration: none;
         }
     }
     .step-image img{
         width: 100%;
         height: auto;
-        padding-bottom: 20px;
+        //padding-bottom: 20px;
     }
 }
-    }
+}
+}
 
     /* Other services */
     .services{
