--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -44,21 +44,24 @@
 <!-- Sample design -->
 <section class="sample">
   <div class="container">
-    <div class="row text">
-      <div class="col-md-3"></div>
-      <div class="col-md-1">
-        <span class="dot"></span>
-      </div>
-      <div class="col-md-6">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-9">
       <div class="sample-text">
-        <h2>We Bring</h2>
-        <h1>DIGITAL</h1>
-        <h1>TRANSFORMATION</h1>
-        <p>THROUGH DESIGN</p>
-        <!-- <img src="/assets/images/sample/sample.png" /> -->
+        <p>We Bring</p>
+        <h1>Digital Transformation</h1>
+        <div class="step-image">
+          <img src="/assets/images/sample/line.svg" />
+        </div>
+        <h2>Through Design</h2>
       </div>
     </div>
-      <div class="col-md-2"></div>
+    <div class="col-md-2">
+      <div class="text">
+      <div class="v1"></div>
+      <h2>A Design Consulting Agency</h2>
+    </div>
+    </div>
     </div>
     <div class="row tab">
           <div class="col-md-1"></div>
